--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+# Ignore all
+*
+
+# Unignore all with extensions
+!*.*
+
+# Unignore all dirs
+!*/
+
+# VS Code
+.vscode/*
+
 # Prerequisites
 *.d
 
